[metadata]
name = tomb_routes
author = John Anderson
author_email = johna@gmail.com
summary = Sphinx extension for documenting your Pyramid APIs.
description-file = README.rst
home-page = https://github.com/SurveyMonkey/pyramid_autodoc

[files]
packages =
    pyramid_autodoc

[entry_points]

[pbr]
warnerrors = True

[pytest]
norecursedirs =
    .git
    .tox
    dist
    build
    *.egg

addopts =
    -rxEfs
    --strict
    --doctest-modules
    --doctest-glob \*.rst
    --tb short
    --ignore setup.py

markers =
    unit
    integration
